Cambiados los metodos List y Map para adaptarse al entorno de java 8